added parallax js file and poster image for videos

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h1>Where the city gets going</h1>
         </div>
 
-        <div class="video-container">
+        <div class="video-container home">
             <iframe src="https://player.vimeo.com/video/326309609?background=1&autoplay=1&loop=1&byline=0&title=0" frameborder="0" allow="autoplay" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" id="video-background"></iframe>
         </div>
         <img src="img/chevron-down.svg" class="scroll-icon" alt="scroll down">
@@ -293,6 +293,7 @@
     <script src="js/carousel.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/animation.js"></script>
+    <script src="js/parallax.js"></script>
 
 </body>
 
