--- a/the-building.html
+++ b/the-building.html
@@ -56,10 +56,9 @@
         </div>
 
         <div class="video-container">
-            <!--  Video is muted & autoplays, placed after major DOM elements for performance  -->
-            <video autoplay loop muted playsinline id="video-background">
-                <source src="media/website-the-building_720.mp4" type="video/mp4">
-            </video>
+            <div class="video-container home">
+                <iframe src="https://player.vimeo.com/video/326336031?background=1&autoplay=1&loop=1&byline=0&title=0" frameborder="0" allow="autoplay" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" id="video-background"></iframe>
+            </div>
         </div>
         <img src="img/chevron-down.svg" class="scroll-icon" alt="scroll down icon">
     </section>
