added parallax file to building page

--- a/the-building.html
+++ b/the-building.html
@@ -338,6 +338,7 @@
     <script src="js/carousel.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/animation.js"></script>
+    <script src="js/parallax.js"></script>
 
 </body>
 
