added last of video embeds

--- a/location.html
+++ b/location.html
@@ -57,9 +57,9 @@
 
     <section class="location">
         <div class="fadein">
-            <video autoplay loop muted playsinline class="block-level--video fullwidth">
-                <source src="media/website-located-in-the-heart.mp4" type="video/mp4">
-            </video>
+            <div class="block-level--video fullwidth">
+                <iframe src="https://player.vimeo.com/video/326346348?autoplay=1&loop=1" frameborder="0" allow="autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            </div>
         </div>
     </section>
 
