--- a/the-building.html
+++ b/the-building.html
@@ -266,9 +266,9 @@
                     <h2>Feel the emotion of the city <span class="title-serif">inside the building</span></h2>
                     <span class="dash-top fadein">—</span>
                 </div>
-                <video autoplay loop muted playsinline class="block-level--video fullwidth">
-                    <source src="media/feel-the-emotion_2.mp4" type="video/mp4">
-                </video>
+                <div class="block-level--video fullwidth">
+                    <iframe src="https://player.vimeo.com/video/326340089?autoplay=1&loop=1" frameborder="0" allow="autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                </div>
             </div>
 
             <div class="info-card">
