--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- NAVIGATION -->
-    <nav class="navbar fixed-top navbar-expand-sm navbar-light">
+    <nav class="navbar fixed-top navbar-expand-md navbar-light">
         <a class="navbar-brand" href="index.html">
             <img src="img/hp-logo.svg" class="main-logo" alt="hofplein logo">
         </a>
