added text amends

--- a/the-building.html
+++ b/the-building.html
@@ -140,14 +140,21 @@
                         <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Rental price</h4>
-                            <p>€200 per squre meter per year</p>
+                            <p>Starting at €200 per square meter per year</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
                         <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Surface</h4>
-                            <p>14,444 sq m (in units from 1,411 sq m)</p>
+                            <p>14,444 sq m</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein" alt="icon">
+                        <div class="features-wrap">
+                            <h4>Floorsize</h4>
+                            <p>1,411 sq m LFE</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
@@ -167,8 +174,8 @@
                     <div class="col-12 col-md-4 flex">
                         <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
-                            <h4>Construction</h4>
-                            <p>1960</p>
+                            <h4>Construction / Renovation</h4>
+                            <p>1960 - 2019</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
@@ -176,6 +183,13 @@
                         <div class="features-wrap">
                             <h4>Number of floors</h4>
                             <p>9 Floors</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein" alt="icon">
+                        <div class="features-wrap">
+                            <h4>Parking ratio</h4>
+                            <p>1:135 sq m in Hofplein 20</p>
                         </div>
                     </div>
                 </div>
