--- a/index.html
+++ b/index.html
@@ -206,7 +206,14 @@
                         <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Surface</h4>
-                            <p>14,444 sq m (in units from 1,411 sq m)</p>
+                            <p>14,444 sq m</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein" alt="icon">
+                        <div class="features-wrap">
+                            <h4>Floorsize</h4>
+                            <p>1,411 sq m LFE</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
@@ -226,8 +233,8 @@
                     <div class="col-12 col-md-4 flex">
                         <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
-                            <h4>Construction</h4>
-                            <p>1960</p>
+                            <h4>Construction / Renovation</h4>
+                            <p>1960 - 2019</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
@@ -235,6 +242,13 @@
                         <div class="features-wrap">
                             <h4>Number of floors</h4>
                             <p>9 Floors</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein" alt="icon">
+                        <div class="features-wrap">
+                            <h4>Parking ratio</h4>
+                            <p>1:135 sq m in Hofplein 20</p>
                         </div>
                     </div>
                 </div>
