layout of partner logos adjusted

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Rental price</h4>
-                            <p>Starting at €200 per square meter per year</p>
+                            <p>Starting at €200,- per square meter per year</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
