text amendeds globablly

--- a/the-building.html
+++ b/the-building.html
@@ -97,7 +97,7 @@
                     <img src="img/03-icon.svg" class="fadein" alt="icon">
                     <div class="features-wrap">
                         <h4>Workspaces</h4>
-                        <p>9 floors from 1,411 sq m</p>
+                        <p>9 floors from 1,411 sq m LFA</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 flex">
@@ -140,21 +140,21 @@
                         <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Rental price</h4>
-                            <p>Starting at €200 per square meter per year</p>
+                            <p>From €200,- per sq m LFA</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
                         <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Surface</h4>
-                            <p>14,444 sq m</p>
+                            <p>14,444 sq m LFA</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
                         <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Floorsize</h4>
-                            <p>1,411 sq m LFE</p>
+                            <p>1,411 sq m LFA</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
@@ -175,7 +175,7 @@
                         <img src="img/star.svg" class="fadein" alt="icon">
                         <div class="features-wrap">
                             <h4>Construction / Renovation</h4>
-                            <p>1960 - 2019</p>
+                            <p>1960 - 2018</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
