--- a/the-building.html
+++ b/the-building.html
@@ -117,7 +117,7 @@
                 <div class="col-12 col-md-4 flex">
                     <img src="img/06-icon.svg" class="fadein" alt="icon">
                     <div class="features-wrap">
-                        <h4>Deli19 Lunchbar</h4>
+                        <h4>Fontein Brasserie</h4>
                         <p>Brasserie by Ron de Jong</p>
                     </div>
                 </div>
